# vpn-controll-app

./: .gitignore  Makefile  backend-fastapi-plan-for-claude.md  vpn-control-app.pen
agent/: README.md  go.mod
agent/cmd/vpn-agent/: main.go
agent/internal/agent/: docker.go  lock.go  lock_unix.go  lock_unix_test.go  lock_windows.go  service.go  service_test.go
agent/internal/awg/: client_config.go  client_config_test.go  clients_table.go  clients_table_test.go  config.go  config_test.go  ip.go  runtime.go  share_uri.go  share_uri_test.go
agent/internal/cli/: cli.go
agent/internal/httpapi/: auth.go  server.go  server_test.go
agent/scripts/: deploy-agent.sh  deploy_agent_test.go
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin_audit_logs.py  admin_servers.py  admin_setup_jobs.py  admin_support.py  admin_users.py  auth.py  devices.py  me.py  servers.py  support.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260707_0001_initial.py
backend/app/domain/: models.py
backend/app/schemas/: admin_servers.py  admin_users.py  audit.py  auth.py  devices.py  me.py  servers.py  setup_jobs.py  support.py
backend/app/services/: agent_client.py  audit_service.py  auth_service.py  device_service.py  server_service.py  setup_job_service.py  support_service.py  user_service.py
backend/app/storage/: __init__.py  db.py  memory.py
backend/app/tests/: conftest.py  test_agent_client.py  test_api.py  test_setup_security.py
backend/app/workers/: setup_worker.py
docs/: security-hardening-plan-for-claude.md
frontend/: .gitignore  AGENTS.md  frontend-kit.config.mjs  index.html  package-lock.json  package.json  stylelint.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.ts
frontend/src/app/: App.vue  AppShell.vue
frontend/src/domains/admin/: api.ts
frontend/src/domains/auth/: api.ts  session.ts
frontend/src/domains/devices/: api.ts
frontend/src/router/: index.ts
frontend/src/styles/: _components.scss  _tokens.scss  main.scss
frontend/tools/: check-tokens.mjs  fonts.mjs  fonts.test.mjs  images.mjs  images.test.mjs  selects.test.mjs  switches.test.mjs  tokens.test.mjs
frontend/tools/lib/: files.mjs  fonts.mjs  images.mjs  tokens.mjs
(+54 files in other folders)
