[project]
name = "vpn-control-backend"
version = "0.1.0"
description = "Control-plane backend for Подсос VPN (FastAPI, in-memory skeleton)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "cryptography>=43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# На следующем этапе стоит заменить PBKDF2 на argon2id (argon2-cffi).

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
